doc(all): make readme more concise