@@ -1,17 +1,37 @@
 # jstart
-jstart is a scriptable version of the `java` command,
-it expands java options automatically with regard to jstart rules.
+**Replace the boilerplate `start-java-application.sh`**
 
-Without any jstart rule, the behaviour of jstart is exactly the same with `java`.
+```shell
+limit_in_bytes=$(cat /sys/fs/cgroup/memory/memory.limit_in_bytes)
 
-With custom jstart rules, you can:
+if [ "$limit_in_bytes" -ne "9223372036854771712" ]
+then
+limit_in_megabytes=$(expr $limit_in_bytes \/ 1048576)
+heap_size=$(expr $limit_in_megabytes \* 2 \/ 3)
+export JAVA_TOOL_OPTIONS="-Xmx${heap_size}m"
+fi
 
-1. Insert a group of predefined system properties(`-D`) .
-2. Choose GC algorithm automatically according to memory limit in docker containers.
-3. Set Xmx with arithmetic expressions like `xmx=quota*2/3`
-4. Switch remote debugging on/off according to specific environment variable.
-5. Switch Native Memory Tracking on/off according to some conditions of the current running context.
+if [ "$ENV_PRIORITY" = "test" ]; then
+jdwp_port=${JDWP_PORT:-3360}
+export JAVA_TOOL_OPTIONS="-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=${jdwp_port} $JAVA_TOOL_OPTIONS"
+fi
 
+JAVA_MODULE_EXPORT_OPTIONS=""
+if [ "$JAVA_VERSION" ~= "8" ]; then
+  JAVA_MODULE_EXPORT_OPTIONS="--illegal-access=warn --add-opens java.base/java.nio=ALL-UNNAMED --all-opens java.base/java.lang=ALL-UNNAMED --all-opens java.base/java.lang.reflect=ALL-UNNAMED"
+fi
 
-With a customized jstart rules loader, you can also change the application start arguments via an external configuration service, 
-instead of rewrite the start script and rebuild a container image.
+java -DFRAMEWORK_PROP1=value1 -DFRAMEWORK_PROP2=value2 \
+ $(echo $JAVA_MODULE_EXPORT_OPTIONS) -cp application.jar com.leyantech.app.Main
+```
+
+**With**:
+
+```shell
+export JSTART="xmx=quota*2/3;predefine_properties=true"
+jstart -cp application.jar com.leyantech.app.Main
+```
+
+**And gain the ability to**:
+
+> customize jvm start options via remote configuration services.
